fix: github actions

--- a/.github/workflows/ci-mcp-server.yml
+++ b/.github/workflows/ci-mcp-server.yml
@@ -72,9 +72,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/
-            ${{ github.repository_owner || github.actor }}/
-            ${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
           flavor: latest=true
           tags: |
             type=semver,pattern={{version}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
